--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ permissions:
   pages: write
 
 env:
-  INSTANCE: 'Writerside/.'
-  ARTIFACT: 'webHelp.2-all.zip'
+  INSTANCE: 'Writerside/net'
+  ARTIFACT: 'webHelpNET2-all.zip'
   DOCKER_VERSION: '233.14389'
 
 jobs:
